--- a/HealthAppStoryBoard1/StoryBoards/Dashboard.storyboard
+++ b/HealthAppStoryBoard1/StoryBoards/Dashboard.storyboard
@@ -183,7 +183,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Bkg-fB-VZl"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="ic_account_circle.png" id="K8q-z6-CT2"/>
+                    <tabBarItem key="tabBarItem" title="" image="homeIcon" selectedImage="homeIcon" id="K8q-z6-CT2"/>
                     <connections>
                         <outlet property="taskCollectionView" destination="qOJ-jK-hZT" id="Jqi-hJ-qyF"/>
                     </connections>
@@ -202,7 +202,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="ic_account_circle.png" width="60" height="60"/>
+        <image name="homeIcon" width="73" height="80"/>
         <namedColor name="HealthyBlack">
             <color red="0.29019607843137257" green="0.29019607843137257" blue="0.29019607843137257" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
